sumo/tests/jtrrouter/errors/network/edge/lane/root__edge__lane#maxspeed__ungiven22/errors.jtrrouter
Error: Attribute 'maxspeed' is missing in definition of lane '2_1'.
Quitting (on error).
